--- a/iOS/Sample/Classes/SQDonationFormViewController.xib
+++ b/iOS/Sample/Classes/SQDonationFormViewController.xib
@@ -36,7 +36,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="1029452679">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIScrollView" id="467333196">
@@ -52,7 +52,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{65, 0}, {174, 100}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="656366479"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<int key="IBUIContentMode">1</int>
@@ -68,7 +67,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 100}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="488036109"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -106,7 +104,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 144}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="400609101"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -143,7 +140,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 173}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="754201805"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -185,7 +181,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 239}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="34508180"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -214,7 +209,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 289}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="628236110"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -236,7 +230,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 315}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="601507055"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -276,7 +269,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 367}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="257986644"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -298,7 +290,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 391}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1014584116"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -329,7 +320,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 450}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="640080326"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -358,7 +348,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 499}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="603115512"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -380,7 +369,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 525}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="428418033"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -411,7 +399,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 577}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="478033800"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -433,7 +420,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 601}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="770326526"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -463,7 +449,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 653}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="775683452"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -485,7 +470,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 679}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="774978728"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -515,7 +499,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 731}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="694708341"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -537,7 +520,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 755}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="747844243"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -568,7 +550,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 812}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="544765840"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -597,7 +578,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 1015}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="485703780"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -619,7 +599,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 1039}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="942745030"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -650,7 +629,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 1091}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="186273027"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -672,7 +650,6 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 1117}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="53497957"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -706,7 +683,6 @@
 												<int key="NSvFlags">274</int>
 												<string key="NSFrame">{{13, 4}, {261, 131}}</string>
 												<reference key="NSSuperview" ref="544765840"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="20424111"/>
 												<string key="NSReuseIdentifierKey">_NS:328</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -735,7 +711,6 @@
 										</array>
 										<string key="NSFrame">{{15, 865}, {286, 139}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="867810428"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -753,8 +728,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{14, 18}, {286, 37}}</string>
 												<reference key="NSSuperview" ref="53497957"/>
-												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:225</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -791,7 +764,6 @@
 										</array>
 										<string key="NSFrame">{{0, 1175}, {320, 443}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="842555778"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -803,7 +775,6 @@
 								</array>
 								<string key="NSFrameSize">{320, 1244}</string>
 								<reference key="NSSuperview" ref="467333196"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="225538516"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -816,7 +787,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1029452679"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="533964486"/>
 						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -825,8 +795,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="467333196"/>
 				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -1187,12 +1155,12 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">continuePressed:</string>
+						<string key="label">continue:</string>
 						<reference key="source" ref="842555778"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">96</int>
+					<int key="connectionID">97</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1446,7 +1414,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">96</int>
+			<int key="maxID">97</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
